maven.  This change is to make things consistent with the above change of case of tool symbols. All uses of
Maven as a reference from the binding must be replaced by maven.

Add in checks for duplicate symbols in the binding.

Change --cachedir option to short form -C so that -d can be used for --debug.

Updated Maven Ant Tasks to 2.0.9.

Move to Java 1.5 for the Gant source: introduce generics and remove casts wherever sensible.


1.1.3 ( rXXXX )
---------------



1.1.2 ( r9087 )
---------------

Updated to using Ivy 2.0.0-beta2.

Corrected the bug that the Ivy tool was not operating in the correct namespace.  This removes the spurious
message: "Trying to override old definition of task buildnumber" that used to happen.

Refactored the IncludeTarget and IncludeTool classes to move replicated code into the common superclass
AbstractTool.

Corrected the way that jars are included on the classpath from ~/.gant/lib, ~/.ant/lib and $ANT_HOME/lib.

Updated TestNG from 5.7 to 5.8 in Maven target set. Amended the properties set so that the TestNG version
number and and classifier can be set by the user instead of being only hardwired.  The defaults are still
hardwired in an ugly way though.

Extended the Ivy tool to allow the path to the Ivy jar to be specified using the ** * notation.

Ensured the AntFile and Include tests work on Windows as well as Ubuntu, Solaris, and Mac OS X.

Modified the verbosity level stuff so as to set the verbosity understood by the Ant tasks that get called. 


1.1.1 ( r9027 )
---------------

Added the Ivy and Maven Ant Tasks jars to the binary distribution.

Amend the Maven target set to add explicit specification of the source and test directories.  This applies
the Groovy joint compiler to everything in that directory, i.e. the Maven 2 split of language specific
directories is not applied.

Amended the Execute tool adding multi-threading of the process output streams to avoid blocking due to