@@ -31,9 +31,10 @@ includeTargets ** gant.targets.Maven * [
                                         groupId : 'org.codehaus.gant' ,
                                         artifactId : 'gant' ,
                                         version : gantVersion ,
+                                        remoteRepositories : [ 'http://snapshots.repository.codehaus.org' ,  'http://repository.codehaus.org' , 'http://repo1.maven.org/maven2' ] ,
                                         compileDependencies : [
-                                                               [ groupId : 'org.codehaus.groovy' , artifactId : 'groovy-all' , version : '1.5.6-SNAPSHOT' ] ,
-                                                               [  groupId : 'commons-cli' , artifactId : 'commons-cli' , version : '1.0' ]
+                                                               [ groupId : 'org.codehaus.groovy' , artifactId : 'groovy' , version : '1.5.6-SNAPSHOT' ] ,
+                                                               [ groupId : 'commons-cli' , artifactId : 'commons-cli' , version : '1.0' ]
                                                                ] ,
                                         javaCompileProperties : [ source : '1.5' , target : '1.5' , debug : 'true' ] ,
                                         deployURL : 'https://dav.codehaus.org/repository/gant' ,
