@@ -20,6 +20,8 @@ Change --cachedir option to short form -C so that -d can be used for --debug.
 
 Updated Maven Ant Tasks to 2.0.9.
 
+Added the ability to specify remote repositories in the Maven Target set.
+
 Move to Java 1.5 for the Gant source: introduce generics and remove casts wherever sensible.
 
 
